--- a/app/src/main/res/drawable-v24/item_poem_back_white.xml
+++ b/app/src/main/res/drawable-v24/item_poem_back_white.xml
@@ -3,9 +3,7 @@
     android:shape="rectangle">
     <corners
         android:bottomLeftRadius="12dp"
-        android:bottomRightRadius="12dp"
-        android:topLeftRadius="12dp"
-        android:topRightRadius="12sp" />
+        android:bottomRightRadius="12dp" />
 
-    <solid android:color="#ededed" />
+    <solid android:color="@android:color/white" />
 </shape>
