--- a/app/src/main/res/layout/layout_show_poem.xml
+++ b/app/src/main/res/layout/layout_show_poem.xml
@@ -1,91 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:layout_marginEnd="8dp"
+    android:layout_height="wrap_content"
+    android:background="@drawable/item_poem_back_white"
     android:gravity="center_vertical"
     android:orientation="vertical"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp">
+    android:paddingStart="18dp"
+    android:paddingTop="20dp"
+    android:paddingEnd="10dp"
+    android:paddingBottom="30dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:gravity="center_vertical"
+        android:layout_marginBottom="12dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_poem_title1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="6dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/circle_fill_mint"
             android:gravity="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:textSize="26sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_poem_content1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
             android:textColor="@color/colorDarkerGray"
-            android:textSize="16sp" />
+            android:textSize="24sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:gravity="center_vertical"
+        android:layout_marginBottom="12dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_poem_title2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="6dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/circle_fill_mint"
             android:gravity="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:textSize="26sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_poem_content2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
             android:textColor="@color/colorDarkerGray"
-            android:textSize="16sp" />
+            android:textSize="24sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_poem_title3"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="6dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/circle_fill_mint"
             android:gravity="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:textSize="26sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_poem_content3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
             android:textColor="@color/colorDarkerGray"
-            android:textSize="16sp" />
+            android:textSize="24sp" />
     </LinearLayout>
 </LinearLayout>
