1~3위 버튼 클릭시 순위에 맞는 삼행시 표시

--- a/app/src/main/res/layout/item_poem.xml
+++ b/app/src/main/res/layout/item_poem.xml
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/btn_poem_like"
+            android:id="@+id/tv_poem_like"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
