--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -39,7 +39,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/btn_poem_like"
+                android:id="@+id/tv_poem_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
