--- a/app/src/main/res/layout/header_main.xml
+++ b/app/src/main/res/layout/header_main.xml
@@ -132,6 +132,7 @@
                         android:src="@drawable/img_main_boy" />
 
                     <Button
+                        android:id="@+id/tv_main_rank_like"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
@@ -142,7 +143,6 @@
                         android:paddingStart="30dp"
                         android:paddingEnd="10dp"
                         android:paddingBottom="10dp"
-                        android:text="100"
                         android:textColor="@color/colorAccent" />
                 </LinearLayout>
 
