--- a/app/src/main/res/layout/layout_show_poem.xml
+++ b/app/src/main/res/layout/layout_show_poem.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/item_poem_back_white"
-    android:gravity="center_vertical"
     android:orientation="vertical"
     android:paddingStart="18dp"
     android:paddingTop="20dp"
@@ -14,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
+        android:background="@android:color/white"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
@@ -24,21 +25,24 @@
             android:background="@drawable/circle_fill_mint"
             android:gravity="center"
             android:textColor="@android:color/white"
-            android:textSize="26sp"
+            android:textSize="23sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_poem_content1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/white"
             android:textColor="@color/colorDarkerGray"
-            android:textSize="24sp" />
+            android:textSize="21sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
+        android:background="@android:color/white"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
@@ -49,21 +53,24 @@
             android:background="@drawable/circle_fill_mint"
             android:gravity="center"
             android:textColor="@android:color/white"
-            android:textSize="26sp"
+            android:textSize="23sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_poem_content2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/white"
             android:textColor="@color/colorDarkerGray"
-            android:textSize="24sp" />
+            android:textSize="21sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
+        android:background="@android:color/white"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
@@ -74,14 +81,15 @@
             android:background="@drawable/circle_fill_mint"
             android:gravity="center"
             android:textColor="@android:color/white"
-            android:textSize="26sp"
+            android:textSize="23sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_poem_content3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/white"
             android:textColor="@color/colorDarkerGray"
-            android:textSize="24sp" />
+            android:textSize="21sp" />
     </LinearLayout>
 </LinearLayout>
