리스트 페이징 처리

--- a/app/src/main/res/drawable/back_stoke_green2.xml
+++ b/app/src/main/res/drawable/back_stoke_green2.xml
@@ -5,5 +5,7 @@
         android:width="1.5dp"
         android:color="@color/colorPrimary" />
 
+    <solid android:color="@android:color/white" />
+
     <corners android:radius="16dp" />
 </shape>
