--- a/app/src/main/res/drawable/ic_rank_1st.xml
+++ b/app/src/main/res/drawable/ic_rank_1st.xml
@@ -1,11 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="34dp"
-    android:height="91dp"
-    android:viewportWidth="34"
-    android:viewportHeight="91">
-    <path
-        android:fillAlpha="0.538"
-        android:fillColor="#cecece"
-        android:pathData="M6,0L28,0A6,6 0,0 1,34 6L34,85A6,6 0,0 1,28 91L6,91A6,6 0,0 1,0 85L0,6A6,6 0,0 1,6 0z"
-        android:strokeAlpha="0.538" />
+    android:width="46dp"
+    android:height="103dp"
+    android:viewportWidth="46"
+    android:viewportHeight="103">
+  <path
+      android:pathData="M12,6L34,6A6,6 0,0 1,40 12L40,91A6,6 0,0 1,34 97L12,97A6,6 0,0 1,6 91L6,12A6,6 0,0 1,12 6z"
+      android:fillColor="#e5e5e5"/>
 </vector>
