--- a/app/src/main/res/drawable/ic_rank_2nd.xml
+++ b/app/src/main/res/drawable/ic_rank_2nd.xml
@@ -1,11 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="34dp"
-    android:height="58dp"
-    android:viewportWidth="34"
-    android:viewportHeight="58">
-    <path
-        android:strokeAlpha="0.538"
-        android:fillColor="#cecece"
-        android:fillAlpha="0.538"
-        android:pathData="M6,0L28,0A6,6 0,0 1,34 6L34,52A6,6 0,0 1,28 58L6,58A6,6 0,0 1,0 52L0,6A6,6 0,0 1,6 0z" />
+    android:width="46dp"
+    android:height="70dp"
+    android:viewportWidth="46"
+    android:viewportHeight="70">
+  <path
+      android:pathData="M12,6L34,6A6,6 0,0 1,40 12L40,58A6,6 0,0 1,34 64L12,64A6,6 0,0 1,6 58L6,12A6,6 0,0 1,12 6z"
+      android:strokeAlpha="0.538"
+      android:fillColor="#cecece"
+      android:fillAlpha="0.538"/>
 </vector>
