--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,9 +16,9 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/layout_game_back"
                 android:layout_width="match_parent"
                 android:layout_height="258dp"
-                android:background="@drawable/back_quiz_main"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -31,8 +31,7 @@
                         android:layout_width="38dp"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
-                        android:layout_marginEnd="5dp"
-                        android:src="@drawable/ic_timer_clock" />
+                        android:layout_marginEnd="5dp" />
 
                     <TextView
                         android:id="@+id/tv_game_timer"
