--- a/app/src/main/res/layout/header_main.xml
+++ b/app/src/main/res/layout/header_main.xml
@@ -23,14 +23,14 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="20dp">
+                android:layout_marginEnd="10dp">
 
                 <TextView
                     android:id="@+id/tv_rank_2nd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_above="@id/ib_main_2nd"
-                    android:layout_marginStart="3dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginBottom="3dp"
                     android:background="@drawable/ic_rank_back"
                     android:gravity="center"
@@ -46,7 +46,6 @@
                     android:layout_height="wrap_content"
                     android:layout_above="@id/tv_main_rank_name"
                     android:layout_alignParentStart="true"
-                    android:layout_marginEnd="4dp"
                     android:background="@android:color/transparent"
                     android:src="@drawable/ic_rank_2nd" />
 
@@ -56,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:layout_above="@id/ib_main_1st"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginStart="3dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginBottom="3dp"
                     android:layout_toEndOf="@id/ib_main_2nd"
                     android:background="@drawable/ic_rank_back"
@@ -71,7 +70,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_above="@id/tv_main_rank_name"
-                    android:layout_marginEnd="4dp"
                     android:layout_toEndOf="@id/ib_main_2nd"
                     android:background="@android:color/transparent"
                     android:src="@drawable/ic_rank_1st_select" />
@@ -81,7 +79,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_above="@id/ib_main_3rd"
-                    android:layout_marginStart="2dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginBottom="3dp"
                     android:layout_toEndOf="@id/ib_main_1st"
                     android:background="@drawable/ic_rank_back"
@@ -107,7 +105,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
                     android:text="영걸 님"
                     android:textColor="@android:color/black"
                     android:textSize="12sp"
@@ -125,11 +122,11 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/iv_main_boy"
                         android:layout_width="107dp"
                         android:layout_height="69dp"
                         android:layout_gravity="bottom"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/img_main_boy" />
+                        android:scaleType="fitCenter" />
 
                     <Button
                         android:id="@+id/tv_main_rank_like"
