--- a/app/src/main/res/layout/item_poem.xml
+++ b/app/src/main/res/layout/item_poem.xml
@@ -26,19 +26,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageButton
+            android:id="@+id/ib_poem_like"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="6dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_heart_white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/tv_poem_like"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/tv_poem_like"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_gravity="bottom"
+            android:layout_marginEnd="5dp"
             android:background="@android:color/transparent"
-            android:drawableStart="@drawable/ic_heart_fill_white"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:paddingStart="40dp"
-            android:text="0"
             android:textColor="@android:color/white"
+            android:textSize="15sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
