--- a/app/src/main/res/layout/layout_show_poem.xml
+++ b/app/src/main/res/layout/layout_show_poem.xml
@@ -18,7 +18,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_poem_title1"
+            android:id="@+id/tv_rank_title1"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="10dp"
@@ -29,7 +29,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_poem_content1"
+            android:id="@+id/tv_rank_content1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
@@ -46,7 +46,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_poem_title2"
+            android:id="@+id/tv_rank_title2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="10dp"
@@ -57,7 +57,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_poem_content2"
+            android:id="@+id/tv_rank_content2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
@@ -74,7 +74,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_poem_title3"
+            android:id="@+id/tv_rank_title3"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="10dp"
@@ -85,7 +85,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_poem_content3"
+            android:id="@+id/tv_rank_content3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
